Prevent filter button text from wrapping

--- a/less/resources.less
+++ b/less/resources.less
@@ -9,6 +9,7 @@
 
   &__filter-btn {
     flex-grow: 1;
+    white-space: nowrap;
   }
 
   html:not(.ie) &__filter-btn {
